# myProgrammingLanguage

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  todo.md  valgrind.rpt
.github/workflows/: general.yml  repo-found.yml  run_test_workflow.yml
benchmarks/factorial/: fact  factorial.cpp  factorial.py  optimised_cpp_benchmark.md  optimised_cpp_benchmark.txt  python_benchmark.txt  unoptimised_cpp_benchmark.txt  viltrum_benchmark.txt
benchmarks/fib/: fib.cpp  fib.py  opt_fib  optimised_cpp_benchmark.txt  python_benchmark.txt  unoptimised_cpp_benchmark.txt  viltrum_benchmark.txt
example_programs/: factorial.vi  fib.vi  hello.vi  hello_world.vi  while.vi
html/: annotated.html  bytecodeSeq_8c.html  bytecodeSeq_8c__incl.map  bytecodeSeq_8c__incl.md5  bytecodeSeq_8c_ab14e7a43127f6c1628e7ec757f1a22fa_cgraph.map  bytecodeSeq_8h.html  bytecodeSeq_8h__dep__incl.map  bytecodeSeq_8h__dep__incl.md5  bytecodeSeq_8h__incl.map  bytecodeSeq_8h__incl.md5  bytecodeSeq_8h_a29b38c4c4b025a9bd6c3d6a8d6950079_cgraph.map  bytecodeSeq_8h_a29b38c4c4b025a9bd6c3d6a8d6950079_cgraph.md5  bytecodeSeq_8h_a33693b9c165c717cc2e3da3275ad3825_cgraph.map  bytecodeSeq_8h_a33693b9c165c717cc2e3da3275ad3825_cgraph.md5  bytecodeSeq_8h_ab14e7a43127f6c1628e7ec757f1a22fa_cgraph.md5  bytecodeSeq_8h_source.html  classes.html  common_8h.html  common_8h__dep__incl.map  common_8h__dep__incl.md5  common_8h__incl.map  common_8h__incl.md5  common_8h_source.html  compiler_8c.html  compiler_8c__incl.map  compiler_8c__incl.md5  compiler_8c_a0a5a515f3c09e23aec7a7e5f51f9eb83_cgraph.map  compiler_8c_a0a5a515f3c09e23aec7a7e5f51f9eb83_cgraph.md5  compiler_8c_a0aab9630bde8f7c05fb4d51c887725d9_cgraph.map  compiler_8c_a0aab9630bde8f7c05fb4d51c887725d9_cgraph.md5  compiler_8c_a1746dc20f51cadbee176e158db7d1b19_cgraph.map  compiler_8c_a1746dc20f51cadbee176e158db7d1b19_cgraph.md5  compiler_8c_a1ca41efc7aa3919f4fdf3249d5e83e0f_cgraph.map  compiler_8c_a1ca41efc7aa3919f4fdf3249d5e83e0f_cgraph.md5  compiler_8c_a220fa5a973fe07409c6d2160521e0ee1_cgraph.map  compiler_8c_a220fa5a973fe07409c6d2160521e0ee1_cgraph.md5  compiler_8c_a22b234f10823688c7cfd20e9d613ab4c_cgraph.map  compiler_8c_a22b234f10823688c7cfd20e9d613ab4c_cgraph.md5  compiler_8c_a23456be303220992a31634dd13f2652e_cgraph.map  compiler_8c_a23456be303220992a31634dd13f2652e_cgraph.md5  (+377 more)
html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  (+80 more)
latex/: annotated.tex  bytecodeSeq_8c.tex  bytecodeSeq_8c__incl.md5  bytecodeSeq_8c_a29b38c4c4b025a9bd6c3d6a8d6950079_cgraph.md5  bytecodeSeq_8h.tex  bytecodeSeq_8h__dep__incl.md5  bytecodeSeq_8h__incl.md5  bytecodeSeq_8h_a33693b9c165c717cc2e3da3275ad3825_cgraph.md5  bytecodeSeq_8h_ab14e7a43127f6c1628e7ec757f1a22fa_cgraph.md5  common_8h.tex  common_8h__dep__incl.md5  common_8h__incl.md5  compiler_8c.tex  compiler_8c__incl.md5  compiler_8c_a0a5a515f3c09e23aec7a7e5f51f9eb83_cgraph.md5  compiler_8c_a0aab9630bde8f7c05fb4d51c887725d9_cgraph.md5  compiler_8c_a1746dc20f51cadbee176e158db7d1b19_cgraph.md5  compiler_8c_a1ca41efc7aa3919f4fdf3249d5e83e0f_cgraph.md5  compiler_8c_a220fa5a973fe07409c6d2160521e0ee1_cgraph.md5  compiler_8c_a22b234f10823688c7cfd20e9d613ab4c_cgraph.md5  compiler_8c_a23456be303220992a31634dd13f2652e_cgraph.md5  compiler_8c_a281509a24705475cf14b62d495ef42ed_cgraph.md5  compiler_8c_a283b4a1ddc70ec4e05b535e42af065d1_cgraph.md5  compiler_8c_a286258b634924f322e9316a6f25dbc04_cgraph.md5  compiler_8c_a298ead74523a4257c38720b2172a4de8_cgraph.md5  compiler_8c_a2c53faeb88bd98ebf1012c621fd88894_cgraph.md5  compiler_8c_a31fb354f8697d9d80f9fd05048879a78_cgraph.md5  compiler_8c_a373d024ae6394731d8861799b0c5cdb0_cgraph.md5  compiler_8c_a38408b3d67b374a80b1f4d6ee848c4b1_cgraph.md5  compiler_8c_a3ff7a8e95770facf4e6044e156c24878_cgraph.md5  compiler_8c_a4d9ac7053f4dde6ebb2288f627c90f3a_cgraph.md5  compiler_8c_a521a8bf8be6a95acc9836c5cfdaf92b9_cgraph.md5  compiler_8c_a53df82b13a45ef09bab4f444649dc509_cgraph.md5  compiler_8c_a5de3ef0cc3082b1a405cac655b0de945_cgraph.md5  compiler_8c_a651e2be489a08fe16e7ca81543ca405a_cgraph.md5  compiler_8c_a6ca4d9c96bbd3087075d1c9e9193c1f5_cgraph.md5  compiler_8c_a6e9c3203bcd2b195b94651e1c2edc362_cgraph.md5  compiler_8c_a84f9521ca3f9ef4a902c020d0bbeeaf3_cgraph.md5  compiler_8c_a8c7763bb8ab7f4e56cfebe926dc85d3f_cgraph.md5  compiler_8c_a9210e3b11442d4f4bfa4a8b54d79baa8_cgraph.md5  (+163 more)
scripts/: build_script.sh  run_executable.sh  run_repl_script.sh  run_tests_script.sh  run_valgrind_script.sh  run_with_file_script.sh  valgrind_script.sh
src/: Makefile  bytecodeSeq.c  bytecodeSeq.h  chunk.c  chunk.h  common.h  compiler.c  compiler.h  constantPoolArray.c  constantPoolArray.h  debug.c  debug.h  expr.cpp  expr.hpp  hashTable.c  hashTable.h  hello.saath  main.c  main.cpp  memory.c  memory.h  object.c  object.h  parser.cpp  parser.hpp  scanner  scanner.c  scanner.cpp  scanner.h  scanner.hpp  table.c  table.h  token  token.cpp  token.hpp  tokentype.hpp  valgrind.rpt  value.c  value.h  virtualMachine.c  (+1 more)
test/: CMakeLists.txt  ExampleTest.cpp  ScannerTest.cpp
